--- a/2025/2025.ipynb
+++ b/2025/2025.ipynb
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "id": "9550b647",
    "metadata": {},
    "outputs": [
@@ -407,188 +407,77 @@
     "        if polygon.contains(rectangle):\n",
     "            return distances[0][0], d\n",
     "    \n",
-    "day9()\n",
-    "    "
+    "day9()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "id": "2b40d87b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(512, 19857)"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def day10():\n",
-    "    pass\n",
+    "    def parse_machine(line):\n",
+    "        items = line.split(' ')\n",
+    "        a, b, c = items[0], items[1:-1], items[-1]\n",
+    "        diagram = a.strip('[]')\n",
+    "        schematics = [[int(y) for y in x.split(',')] for x in re.findall(r'\\((\\d+(?:,\\d+)*)\\)', ' '.join(b))]\n",
+    "        requirements = [int(x) for x in c.strip('}{').split(',')]\n",
+    "        return diagram, schematics, requirements\n",
+    "\n",
+    "    machines = data(10, parse_machine)\n",
+    "\n",
+    "    def solve_machine(d, s, r, flag=False):\n",
+    "        solver = z3.Optimize()\n",
+    "        variables = [z3.Int(f'v{i}') for i in range(len(s))]\n",
+    "        for i in variables:\n",
+    "            solver.add(i >= 0)\n",
+    "        solver.minimize(sum(variables))\n",
+    "\n",
+    "        for i, output in enumerate(r):\n",
+    "            f = sum([variables[j] for j, v in enumerate(s) if i in v])\n",
+    "            if flag:\n",
+    "                output = not d[i] == '.'\n",
+    "                f = sum([variables[j] for j, v in enumerate(s) if i in v])%2\n",
+    "            solver.add(output == f)\n",
+    "\n",
+    "        solver.check()\n",
+    "        return solver.model()\n",
+    "\n",
+    "    part1, part2 = 0, 0\n",
+    "    for machine in machines:\n",
+    "        indicator = solve_machine(*machine, True)\n",
+    "        joltage = solve_machine(*machine)\n",
+    "        part1 += sum([indicator[x].as_long() for x in indicator])\n",
+    "        part2 += sum([joltage[x].as_long() for x in joltage])\n",
+    "    return part1, part2\n",
     "\n",
     "day10()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
-   "id": "0063c808",
+   "execution_count": null,
+   "id": "a9ebb775",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse_machine(line):\n",
-    "    items = line.split(' ')\n",
-    "    a, b, c = items[0], items[1:-1], items[-1]\n",
+    "def day11():\n",
+    "    return\n",
     "\n",
-    "    diagram = a.strip('[]')\n",
-    "    schematics = [[int(y) for y in x.split(',')] for x in re.findall(r'\\((\\d+(?:,\\d+)*)\\)', ' '.join(b))]\n",
-    "    requirements = [int(x) for x in c.strip('}{').split(',')]\n",
-    "\n",
-    "    return diagram, schematics, requirements\n",
-    "\n",
-    "machines = data(10, parse_machine)\n",
-    "# machines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "id": "789b465a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def solve_machine(d, s, r):\n",
-    "    solver = z3.Optimize()\n",
-    "    variables = [\n",
-    "        z3.Int(f'v{i}') for i in range(len(s))\n",
-    "    ]\n",
-    "    for i in variables:\n",
-    "        solver.add(i >= 0)\n",
-    "    solver.minimize(sum(variables))\n",
-    "\n",
-    "    for i in range(len(d)):\n",
-    "        output = False if d[i] == '.' else True\n",
-    "        f = sum([variables[j] for j, v in enumerate(s) if i in v])%2\n",
-    "        solver.add(output == f)\n",
-    "\n",
-    "    solver.check()\n",
-    "    result = solver.model()\n",
-    "    return result\n",
-    "\n",
-    "result = solve_machine(*machines[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "id": "9391a396",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "512"
-      ]
-     },
-     "execution_count": 134,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result = 0\n",
-    "for m in machines:\n",
-    "    test = solve_machine(*m)\n",
-    "    result += sum([test[x].as_long() for x in test])\n",
-    "\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "id": "7646a478",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def solve_machine(d, s, r):\n",
-    "    solver = z3.Optimize()\n",
-    "    variables = [\n",
-    "        z3.Int(f'v{i}') for i in range(len(s))\n",
-    "    ]\n",
-    "    for i in variables:\n",
-    "        solver.add(i >= 0)\n",
-    "    solver.minimize(sum(variables))\n",
-    "\n",
-    "    for i, output in enumerate(r):\n",
-    "        f = sum([variables[j] for j, v in enumerate(s) if i in v])\n",
-    "        solver.add(output == f)\n",
-    "\n",
-    "    solver.check()\n",
-    "    result = solver.model()\n",
-    "    return result\n",
-    "\n",
-    "result = solve_machine(*machines[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "id": "a5aabd6a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "33"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result = 0\n",
-    "for m in machines:\n",
-    "    test = solve_machine(*m)\n",
-    "    result += sum([test[x].as_long() for x in test])\n",
-    "\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "id": "0d37b78c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "solver = z3.Optimize()\n",
-    "x = z3.Int('x')\n",
-    "y = z3.Int('y')\n",
-    "solver.minimize(3*x+y%2)\n",
-    "solver.check()\n",
-    "test = solver.model()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "id": "a2798342",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "[y = 0]"
-      ],
-      "text/plain": [
-       "[y = 0]"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test"
+    "day11()"
    ]
   }
  ],
