--- a/2025/2025.ipynb
+++ b/2025/2025.ipynb
@@ -548,72 +548,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "8b9c3bba",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['45', '35', '22', '25', '31', '27', '30', '30']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "837d9495",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parse_input():\n",
-    "    lines = data(12)[1:]\n",
-    "\n",
-    "    def parse_block(b):\n",
-    "        nums = [int(x) for x in b.replace('x', ' ').replace(':', ' ').split()]\n",
-    "        return (nums[0], nums[1]), nums[2:]\n",
-    "\n",
-    "    blocks, block = Counter(), 0\n",
-    "    for i, line in enumerate(lines):\n",
-    "        if 'x' in line:\n",
-    "            return [blocks[x] for x in blocks], [parse_block(l) for l in lines[i:]]\n",
-    "        elif not line:\n",
-    "            block += 1\n",
-    "            continue\n",
-    "        else:\n",
-    "            blocks[block] += line.count('#')\n",
-    "\n",
-    "blocks, boxes = parse_input()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "cab3c885",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5, 7, 6, 7, 7, 7]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(blocks)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "1e559bc5",
+   "execution_count": 76,
+   "id": "a9ebb775",
    "metadata": {},
    "outputs": [
     {
@@ -622,62 +558,39 @@
        "499"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = 0\n",
-    "for dims, reqs in boxes:\n",
-    "    area = math.prod(dims)\n",
-    "    reqs = sum([math.prod(x) for x in zip(reqs, blocks)])\n",
-    "    if area > reqs:\n",
-    "        result += 1\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "d4fa7982",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "36 41 [34, 13, 30, 26, 30, 23] 1476 994\n",
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open(\"data/day12.txt\") as f:\n",
-    "    *shapes, regions = f.read().strip().split(\"\\n\\n\")\n",
-    "\n",
-    "sizes = [sum(c == \"#\" for c in shape) for shape in shapes]\n",
-    "\n",
-    "part1 = 0\n",
-    "for region in regions.split(\"\\n\"):\n",
-    "    w, h, *nums = map(int, region.replace(\"x\", \" \").replace(\":\", \"\").split(\" \"))\n",
-    "    print(w, h, nums, w*h, sum(n * size for n, size in zip(nums, sizes)))\n",
-    "    if w * h >= sum(n * size for n, size in zip(nums, sizes)):\n",
-    "        part1 += 1\n",
-    "    break\n",
-    "\n",
-    "print(part1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a9ebb775",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def day12():\n",
-    "    return\n",
+    "    def parse_input():\n",
+    "        lines = data(12)[1:]\n",
+    "\n",
+    "        def parse_block(b):\n",
+    "            nums = [int(x) for x in b.replace('x', ' ').replace(':', ' ').split()]\n",
+    "            return (nums[0], nums[1]), nums[2:]\n",
+    "\n",
+    "        blocks, block = Counter(), 0\n",
+    "        for i, line in enumerate(lines):\n",
+    "            if 'x' in line:\n",
+    "                return [blocks[x] for x in blocks], [parse_block(l) for l in lines[i:]]\n",
+    "            elif not line:\n",
+    "                block += 1\n",
+    "                continue\n",
+    "            else:\n",
+    "                blocks[block] += line.count('#')\n",
+    "\n",
+    "    blocks, boxes = parse_input()\n",
+    "    # blocks[-1] += 1 # Doesn't matter, but the other blocks can't fit into the middle for my input\n",
+    "\n",
+    "    def check_box(dims, reqs):\n",
+    "        area = math.prod(dims)\n",
+    "        reqs = sum([math.prod(x) for x in zip(reqs, blocks)])\n",
+    "        return area > reqs\n",
+    "\n",
+    "    return sum(check_box(*b) for b in boxes)\n",
     "\n",
     "day12()"
    ]
