--- a/2025/2025.ipynb
+++ b/2025/2025.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "3eeef51a",
    "metadata": {},
    "outputs": [],
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "a9ebb775",
    "metadata": {},
    "outputs": [
@@ -558,7 +558,7 @@
        "499"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,8 +587,9 @@
     "\n",
     "    def check_box(dims, reqs):\n",
     "        area = math.prod(dims)\n",
-    "        reqs = sum([math.prod(x) for x in zip(reqs, blocks)])\n",
-    "        return area > reqs\n",
+    "        # min_bound = sum([math.prod(x) for x in zip(reqs, blocks)])\n",
+    "        max_bound = sum(reqs)*9\n",
+    "        return max_bound <= area\n",
     "\n",
     "    return sum(check_box(*b) for b in boxes)\n",
     "\n",
